apps/edw/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edw-sample-app
  labels:
    app: edw-sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edw-sample-app
  template:
    metadata:
      labels:
        app: edw-sample-app
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
