apps/edw/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edw-sample-app
spec:
  selector:
    app: edw-sample-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
