apps/edw/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edw-sample-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: edw.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edw-sample-app
                port:
                  number: 80
